# sii_ps_beau_stl

a_count_anyof/: z.cpp
a_count_anyof/include/: llib.h
a_count_anyof/src/: llib.cpp
a_count_anyof/z_template/include/: llib.h
a_count_anyof/z_template/src/: llib.cpp
b/: CMakeLists.txt  z.cpp
b/include/: llib.h  ob.h
c_2506shufflesort/: z.cpp
c_2506shufflesort/include/: llib.h
c_2506shufflesort/z_template/: a.out
d2706transform/: z.cpp
d2706transform/z_template/: CMakeLists.txt
e_2606fixed_array/: CMakeLists.txt  z.cpp
e_2606fixed_array/include/: complicated.h
e_2606fixed_array/z_template/: z.cpp
f28/: z.cpp
f28/include/: print.h
g29sfinae/: z.cpp
g29sfinae/include/: llib.h
template/: CMakeLists.txt  z.cpp
template/include/: iprint.h
templatecpp11/: compile_commands.json  z.cpp
templatecpp11/include/: llib.h
